5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1798_2562.log
== SUBMITION (2019-06-09 17:15:19) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet>1)):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if npar%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input("Primeiro vetor: ")))
	
-- EXECUTION TIME:
1.09968
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2562/main.py", line 14, in <module>
    vet = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:15:23) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet>1)):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if npar%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input("Primeiro vetor: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:16:31) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet>1)):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if npar%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 17:17:12) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet>1)):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
	
-- EXECUTION TIME:
1.09231
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2562/main.py", line 14, in <module>
    vet = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:17:15) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet>1)):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:18:31) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet>1)):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:18:50) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet>1)):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 17:19:32) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
	
-- EXECUTION TIME:
0.915993
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
4
8
0
11
11
6
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
1
12
13
16
1
17
10
0
10
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
Primeiro vetor: 8
10
18
 2
2
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:19:32) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 17:19:54) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
	
-- EXECUTION TIME:
1.18583
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
4
8
0
11
11
6
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
1
12
13
16
1
17
10
0
10
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
8
10
18
2
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:07:51) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" "))
-- EXECUTION TIME:
0.727511
-- ERROR:
  File "/home/codebench/codes/1798/2562/main.py", line 15
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:07:53) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" "))
-- EXECUTION TIME:
0.605735
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1798/2562/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:07:55) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" "))
-- EXECUTION TIME:
1.71597
-- ERROR:
  File "/home/codebench/codes/1798/2562/main.py", line 15
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
